--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node  nodemon app.js"
   },
   "author": "lawal olawale",
   "license": "ISC",
