--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "cd client && npm run build",
-    "install": "cd client && npm install",
+    "build": "npm run build",
+    "install": "npm install",
     "start": "node app.js"
   },
   "author": "lawal olawale",
