--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "npm run build",
+    "build": "npm build",
     "install": "npm install",
     "start": "node app.js"
   },
